Changelog
=========


1.4.3 (unreleased)
------------------

- Nothing changed yet.


1.4.2 (2016-12-19)
------------------

- Render less line breaks in the member block template if there is no content to
  follow the line break (in order to reduce space before the following block).
  [mbaechtold]


1.4.1 (2016-11-10)
------------------

- Fix permission check in utls.py (get_backreferences). It's "View" not "zope2.View".
  [mathias.leimgruber]



1.4.0 (2016-09-13)
------------------

- The membership links on the contact detail view now point to the
  container containing the memberblock and not to the memberblock
  itself. [mbaechtold]

- Add option to hide the map on the contact detail view. [mbaechtold]

- Add option to hide the memberships on the contact detail view. [mbaechtold]

- Add ftw.referencewidget and use it instead of formwidget.contenttree.
  [tschanzt]

- Inplace migrators for migrating from egov.contactdirectory. [jone]

- Display the function of the contact of a member block if the option
  "Acquire address" is checked on the member block.
  [mbaechtold]

- Install a newer version of "collective.geo.openlayers". This makes the
  "ftw.openlayerhotfix" obsolete.
  [mbaechtold]


1.3.0 (2016-08-10)
------------------

- Remove metadata.xml-dependencie to ftw.simplelayout for the simplelayout extra.
  The extra is an addon of ftw.simplelayout and should not install it.
  [elioschmutz]

- Added ldap-to-contact sync.
  [lknoepfel]


1.2.0 (2016-03-30)
------------------

- Redesign ftw.contacts.
  [Kevin Bieri]

1.1.0 (2016-03-30)
------------------

- Remove unused geo configurations due to a changed map implementation
  [elioschmutz]

- Fix geolocation lookup for georeferenced contacts.
  The map will no longer be rendered through the viewlet. It is implemented
  directly into the contact.pt for better control.
  [elioschmutz]

- Add missing behavior for geo referenced contact.
  [elioschmutz]

- Fix broken profilehook name for ftw.geo integraton.