@@ -5,7 +5,8 @@ Changelog
 1.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Sort the memberships alphabetically (on the contact detail view).
+  [mbaechtold]
 
 
 1.4.2 (2016-12-19)
